# week2/routes/index.js
@@ -1,8 +1,12 @@
 import express from 'express'
-import {GetContactById,GetAllContacts} from '../controllers/contacts.js'
 import contactRoutes from './contacts.js'
+import swaggerUi from 'swagger-ui-express';
+import swaggerDocument from '../swagger.json' with {type:"json"};
 
 const routes = express.Router();
+
+routes.use('/api-docs',swaggerUi.serve)
+routes.get('/api-docs',swaggerUi.setup(swaggerDocument))
 
 routes.use("/contacts",contactRoutes)
 
